Published multiple files

--- a/src/site/notes/b站课件/0课程开始之前的话.md
+++ b/src/site/notes/b站课件/0课程开始之前的话.md
@@ -3,9 +3,7 @@
 ---
 
 
-如果你喜欢并有志于二进制安全的研究，可以继续看下去。
-研究的开始：语数外。语文大家都会，我想教会大家外语和二进制安全方向的数学。
-完成后，就可以进一步学习深入的二进制安全知识了。如果你想逆向一款游戏软件，开发一个游戏外挂，你需要继续学习但不限于如下知识：
+如果你喜欢并有志于二进制安全的研究，可以继续看下去。如果你想逆向一款游戏软件，开发一个游戏外挂，你需要继续学习但不限于如下知识：
 1. 软件代码逆向分析
 2. 硬件分析
 3. 密码学分析
@@ -17,5 +15,6 @@
 3. 密码学基础
 4. 硬件基础
 
-这些都不是可以在短期内突击学习的。up主也是由于读博才有时间为大家录制。现在逆向分析已经越来越复杂了，如果基础不好，逆向分析就是空中楼阁，还是需要大家多多努力做好心理准备。
+这些都不是可以在短期内突击学习的。up主也是由于准备读博才有时间为大家录制。现在逆向分析已经越来越复杂了，如果基础不好，逆向分析就是空中楼阁，还是需要大家多多努力做好心理准备。
 本课程完全免费，笔记在 https://zhenglong.eu.org 
+
