--- a/src/site/notes/b站课件/1学习计划.md
+++ b/src/site/notes/b站课件/1学习计划.md
@@ -9,16 +9,9 @@
 ## 阅读
 ## 写作
 # 数学
-## 普林斯顿微积分读本
-## 线性代数及其应用
-## 普林斯顿概率论读本
+## 微积分
+## 线性代数
+## 概率论
 
-# 人工智能
-# 计算机及系统原理
-## 编码：隐匿在计算机软硬件背后的语言
-## 深入理解计算机系统
 
-# 网络技术
-## TCP/IP详解 卷1：协议
-# 安全技术
 
