Published multiple files

--- a/src/site/notes/为什么要做综合基础知识.md
+++ b/src/site/notes/为什么要做综合基础知识.md
@@ -10,3 +10,4 @@
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028163756.png)
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164050.png)
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164058.png)
+![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028173803.png)
