Published multiple files

--- a/src/site/notes/为什么要做综合基础知识.md
+++ b/src/site/notes/为什么要做综合基础知识.md
@@ -8,6 +8,27 @@
 
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028163702.png)
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028163756.png)
-![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164050.png)
-![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164058.png)
-![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028173803.png)
+
+# 2024年泉州工艺美术职业学院专项公开招聘人员控制总量内专任教师公告
+- **（二）技能测试（岗位代码01-21）**
+	
+	1.技能测试内容为现场实践技能操作，使用相应素材或软件完成指定作品的制作，考核各岗位专业相关的技能操作、专业知识。测试时长2小时。
+	
+	2.技能测试成绩（折算成百分制）合格线为60分，在技能测试合格线上按成绩从高分到低分，以拟聘人数与进入面试人数1：3的比例确定面试人选；面试人选最后一名技能测试成绩出现并列的，取所有并列的报考人员为面试人选；达不到规定比例的，按实有人数确定面试人选；弃权面试的空额从技能测试成绩合格人员中按技能测试成绩从高分到低分顺序依次递补。未达到技能测试合格分数线的报考人员将不予确定为面试对象。
+	![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028181345.png)
+
+- **（四）面试**
+	
+	面试采取片段教学和专业问答方式，主要考核报考人员的专业知识、教学能力、专业岗位技能等。面试成绩实行百分制，其中片段教学占70%、专业问答占30%。面试合格线为70分。未达到合格分数线的报考人员将不予确定为体检、考察对象。面试评委由7人组成，采取去掉一个最高分、一个最低分，取算术平均分的方法确定报考人员的面试分数，成绩保留到小数点后两位数，第三位数四舍五入。
+	
+	面试成绩、入围人员成绩在泉州工艺美术职业学院网站公示7天。
+	![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028180518.png)
+	![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028181425.png)
+	面试采取片段教学和专业问答方式，主要考核报考人员的专业知识、教学能力、专业岗位技能等。面试成绩实行百分制，其中片段教学占70%、专业问答占30%。
+	具体如下：片段教学环节选用教材详见附件2，仅使用粉笔和黑板等教具（不使用电教设备），片段教学时长15分钟，备课时间40分钟，面试当天由学校统一提供教材，但考生不得在教材上做任何标记。专业问答环节共有2道考题，作答时长共5分钟。片段教学具体内容、专业问答试题在面试当天通过监督人员随机抽取确定。
+- **（五）综合成绩**
+	
+	1.考试采用技能测试与面试相结合的（即岗位代码01-21），综合成绩按技能测试成绩（技能测试成绩折算成百分制）占40%和面试成绩占60%合并计算，成绩保留到小数点后两位数，第三位数四舍五入。
+	![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164050.png)
+	![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164058.png)
+	![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028173803.png)
