Published multiple files

--- a/src/site/notes/为什么要做综合基础知识.md
+++ b/src/site/notes/为什么要做综合基础知识.md
@@ -2,6 +2,8 @@
 {"dg-publish":true,"permalink":"/为什么要做综合基础知识/","dgPassFrontmatter":true}
 ---
 
+# 考试内容与招聘岗位
+![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028183052.png)
 
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241022191515.png)
 ![image.png](https://raw.githubusercontent.com/Z-h-e-n-g-L-o-n-g/imgroom/main/obsidian/20241028164720.png)
